Add solution with lambda function

--- a/notebooks/01_jupyter_starter.ipynb
+++ b/notebooks/01_jupyter_starter.ipynb
@@ -563,6 +563,26 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "['even', 'odd', 'even', 'odd', 'even', 'odd']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(lambda x: 'even' if x % 2 == 0 else 'odd', [0, 1, 2, 3, 4, 5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
