--- a/notebooks/04_mllib_model_training.ipynb
+++ b/notebooks/04_mllib_model_training.ipynb
@@ -1430,10 +1430,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "taxi = spark.sql(\"SELECT * FROM taxi.participant3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- taxi_id: string (nullable = true)\n",
+      " |-- trip_start_timestamp: string (nullable = true)\n",
+      " |-- trip_end_timestamp: string (nullable = true)\n",
+      " |-- trip_seconds: long (nullable = true)\n",
+      " |-- trip_miles: float (nullable = true)\n",
+      " |-- pickup_census_tract: long (nullable = true)\n",
+      " |-- dropoff_census_tract: long (nullable = true)\n",
+      " |-- pickup_community_area: long (nullable = true)\n",
+      " |-- dropoff_community_area: long (nullable = true)\n",
+      " |-- fare: float (nullable = true)\n",
+      " |-- tips: float (nullable = true)\n",
+      " |-- tolls: float (nullable = true)\n",
+      " |-- extras: float (nullable = true)\n",
+      " |-- trip_total: float (nullable = true)\n",
+      " |-- company: string (nullable = true)\n",
+      " |-- target: integer (nullable = true)\n",
+      " |-- tips_fare_ratio: double (nullable = true)\n",
+      " |-- has_tips: boolean (nullable = true)\n",
+      " |-- trip_miles_bins: double (nullable = true)\n",
+      " |-- trip_total_bins: double (nullable = true)\n",
+      " |-- same_community_area: boolean (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "taxi.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zacznijmy od małego podzbioru zmiennych."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+------------+----------+--------+-------------------+---------------+---------------+-------------------+\n",
+      "|target|trip_seconds|trip_miles|has_tips|    tips_fare_ratio|trip_miles_bins|trip_total_bins|same_community_area|\n",
+      "+------+------------+----------+--------+-------------------+---------------+---------------+-------------------+\n",
+      "|     1|         840|       1.8|    true|0.20512820512820512|            2.0|            6.0|               null|\n",
+      "|     0|        1320|      4.06|   false|                0.0|            3.0|            7.0|               null|\n",
+      "|     0|        1800|     17.29|   false|                0.0|            4.0|            9.0|               null|\n",
+      "|     1|        1560|     21.57|    true|0.20579710144927535|            4.0|            9.0|               null|\n",
+      "|     0|         180|       0.3|   false|                0.0|            0.0|            0.0|               null|\n",
+      "+------+------------+----------+--------+-------------------+---------------+---------------+-------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "taxi = taxi.select(\n",
+    "    'target',\n",
+    "    'trip_seconds',\n",
+    "    'trip_miles',\n",
+    "    'has_tips',\n",
+    "    'tips_fare_ratio',\n",
+    "    'trip_miles_bins',\n",
+    "    'trip_total_bins',\n",
+    "    'same_community_area'\n",
+    ")\n",
+    "taxi.show(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Zastępowanie braków danych***"
+   ]
   }
  ],
  "metadata": {
