Add implementation of a model on previously created features

--- a/notebooks/04_mllib_model_training.ipynb
+++ b/notebooks/04_mllib_model_training.ipynb
@@ -1430,7 +1430,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyspark.sql.functions as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1524,7 +1533,280 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Zastąp `boolean` typem `integer`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "taxi = taxi.withColumn('has_tips', F.col('has_tips').cast('double'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "***Zastępowanie braków danych***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "taxi = taxi.na.fill(-99)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Vector assembler***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.feature import VectorAssembler\n",
+    "\n",
+    "assembler = VectorAssembler(\n",
+    "    inputCols=[\n",
+    "        'trip_seconds',\n",
+    "        'trip_miles',\n",
+    "        'tips_fare_ratio',\n",
+    "        'trip_miles_bins',\n",
+    "        'trip_total_bins'\n",
+    "    ],\n",
+    "    outputCol='numeric_features'\n",
+    ")\n",
+    "taxi = assembler.transform(taxi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Binarizer***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.feature import Binarizer\n",
+    "\n",
+    "binarizer = Binarizer(\n",
+    "    threshold=0.5,\n",
+    "    inputCol='has_tips',\n",
+    "    outputCol='binarized_features'\n",
+    ")\n",
+    "taxi = binarizer.transform(taxi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Połącz nazwy zmiennych i wytrenuj model***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_assembler = VectorAssembler(\n",
+    "    inputCols=[\n",
+    "        'numeric_features',\n",
+    "        'binarized_features'\n",
+    "    ],\n",
+    "    outputCol='training_features'\n",
+    ")\n",
+    "taxi = features_assembler.transform(taxi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Przygotuj zmienną celu***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "taxi = taxi\\\n",
+    "    .withColumn('target', taxi.target.cast('double'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Trenuj model***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.classification import LogisticRegression\n",
+    "\n",
+    "(trainingData, testData) = taxi.randomSplit([0.7, 0.3], seed=42)\n",
+    "logreg = LogisticRegression(\n",
+    "    labelCol='target',\n",
+    "    featuresCol='training_features'\n",
+    ")\n",
+    "model = logreg.fit(trainingData)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Oceń performance***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = model.transform(testData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluator = MulticlassClassificationEvaluator(\n",
+    "    labelCol='target',\n",
+    "    predictionCol='prediction',\n",
+    "    metricName='accuracy'\n",
+    ")\n",
+    "accuracy = evaluator.evaluate(predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Błąd na zbiorach: treningowym i testowym***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zbiór: train --- Błąd: 0.022130\n",
+      "Zbiór: test --- Błąd: 0.022286\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, dataset in zip(['train', 'test'], [trainingData, testData]):\n",
+    "    preds = model.transform(dataset)\n",
+    "    evaluator = MulticlassClassificationEvaluator(\n",
+    "        labelCol='target',\n",
+    "        predictionCol='prediction',\n",
+    "        metricName='accuracy'\n",
+    "    )\n",
+    "    print('Zbiór: {dataset} --- Błąd: {error:.6f}'.format(\n",
+    "        dataset=name,\n",
+    "        error=1 - evaluator.evaluate(preds)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Optymalizacja hyperparametrów***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.tuning import CrossValidator, ParamGridBuilder\n",
+    "\n",
+    "paramGrid = ParamGridBuilder()\\\n",
+    "    .addGrid(lr.elasticNetParam, [0.0, 0.2, 0.8, 1.0])\\\n",
+    "    .addGrid(lr.regParam, [0.0, 0.1, 0.5, 1.0])\\\n",
+    "    .build()\n",
+    "\n",
+    "evaluator = MulticlassClassificationEvaluator(\n",
+    "    labelCol='target',\n",
+    "    predictionCol='prediction',\n",
+    "    metricName='accuracy'\n",
+    ")\n",
+    "\n",
+    "crossval = CrossValidator(\n",
+    "    estimator=lr,\n",
+    "    estimatorParamMaps=paramGrid,\n",
+    "    evaluator=evaluator,\n",
+    "    numFolds=3\n",
+    ")\n",
+    "\n",
+    "cvModel = crossval.fit(trainingData)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Oceń performance***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zbiór: train --- Błąd: 0.022130\n",
+      "Zbiór: test --- Błąd: 0.022286\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, dataset in zip(['train', 'test'], [trainingData, testData]):\n",
+    "    preds = cvModel.transform(dataset)\n",
+    "    evaluator = MulticlassClassificationEvaluator(\n",
+    "        labelCol='target',\n",
+    "        predictionCol='prediction',\n",
+    "        metricName='accuracy'\n",
+    "    )\n",
+    "    print('Zbiór: {dataset} --- Błąd: {error:.6f}'.format(\n",
+    "        dataset=name,\n",
+    "        error=1 - evaluator.evaluate(preds)))"
    ]
   }
  ],
