Add: model inspection

--- a/notebooks/04_mllib_model_training.ipynb
+++ b/notebooks/04_mllib_model_training.ipynb
@@ -1808,6 +1808,56 @@
     "        dataset=name,\n",
     "        error=1 - evaluator.evaluate(preds)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = cvModel.bestModel\n",
+    "summary = model.summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = []\n",
+    "for vector_assember in [assembler, binarizer]:\n",
+    "    try:\n",
+    "        features.extend(vector_assember.getInputCols())\n",
+    "    except AttributeError:\n",
+    "        features.extend([vector_assember.getInputCol()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature trip_seconds has coef: -0.0001\n",
+      "Feature trip_miles has coef: 0.0224\n",
+      "Feature tips_fare_ratio has coef: -0.1015\n",
+      "Feature trip_miles_bins has coef: -0.0279\n",
+      "Feature trip_total_bins has coef: 0.1329\n",
+      "Feature has_tips has coef: 9.9491\n"
+     ]
+    }
+   ],
+   "source": [
+    "for feature, coef in zip(features, model.coefficients):\n",
+    "    print('Feature {feature} has coef: {coef:.4f}'.format(\n",
+    "        feature=feature,\n",
+    "        coef=coef\n",
+    "    ))"
+   ]
   }
  ],
  "metadata": {
