--- a/notebooks/04_mllib_model_training.ipynb
+++ b/notebooks/04_mllib_model_training.ipynb
@@ -1533,7 +1533,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Zastąp `boolean` typem `integer`."
+    "Zastąp `boolean` typem `double`."
    ]
   },
   {
